--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,13 @@
 .App {
   text-align: center;
 }
+.main-container {
+  width: 90%;
+
+  /* border: 1px solid gray; */
+  margin: auto;
+  margin-top: 30px;
+}
 
 .App-logo {
   height: 40vmin;
